fix: hide task badge icon on mobile

--- a/src/styles/tasks.scss
+++ b/src/styles/tasks.scss
@@ -389,18 +389,6 @@
   padding: var(--spacing-md);
   padding-top: 10px;
   container-type: inline-size;
-
-  @container (min-width: 680px) {
-    grid-template-columns: repeat(4, 1fr);
-  }
-
-  @container (max-width: 400px) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @container (max-width: 340px) {
-    grid-template-columns: repeat(1, 1fr);
-  }
 }
 
 .Layer__tasks-month-selector__month {
